--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
 
           <!-- TODO: при нажатии элементы массива фильтруются в пределах [minweight, maxweight] -->
-          <button class="filter__btn line">Фильтровать</button>
+          <button class="filter__btn line">Фильтровать по весу</button>
 
           <div class="line">
             <span>Алгоритм сортировки:</span>
@@ -45,10 +45,13 @@
           </div>
 
           <!-- TODO: при нажатии происходит смена алгоритма сортировки -->
-          <button class="sort__change__btn line">Сменить алгоритм сортировки</button>
+          <button class="sort__change__btn line">
+            Сменить алгоритм сортировки
+          </button>
 
           <!-- TODO: при нажатии происходит сортировка и рассчет времени сортировки -->
-          <button class="sort__action__btn line">Сортировать</button>
+          <button class="sort__action__btn line">Сортировать по цвету</button>
+          <button class="cancel__btn line">Сбросить все фильтры</button>
 
           <!-- пользователь указывает значения характеристик будущего фрукта -->
           <div class="line">
@@ -58,7 +61,9 @@
 
           <div class="line">
             <div>color:</div>
-            <input class="color__input" />
+            <select class="color__input">
+              <option>выберите цвет</option>
+            </select>
           </div>
 
           <div class="line">
@@ -75,48 +80,7 @@
       <section class="fruits__wrapper">
         <h2 class="wrapper__title">🥑 Список экзотических фруктов</h2>
         <!-- TODO: формировать список динамически (то есть закоментированный код удалить) -->
-        <ul class="fruits__list">
-          <!-- <li class="fruit__item fruit_violet">
-            <div class="fruit__info">
-              <div>index: 0</div>
-              <div>kind: Мангустин</div>
-              <div>color: фиолетовый</div>
-              <div>weight (кг): 13</div>
-            </div>
-          </li>
-          <li class="fruit__item fruit_green">
-            <div class="fruit__info">
-              <div>index: 1</div>
-              <div>kind: Дуриан</div>
-              <div>color: зеленый</div>
-              <div>weight (кг): 35</div>
-            </div>
-          </li>
-          <li class="fruit__item fruit_carmazin">
-            <div class="fruit__info">
-              <div>index: 2</div>
-              <div>kind: Личи</div>
-              <div>color: розово-красный</div>
-              <div>weight (кг): 17</div>
-            </div>
-          </li>
-          <li class="fruit__item fruit_yellow">
-            <div class="fruit__info">
-              <div>index: 3</div>
-              <div>kind: Карамбола</div>
-              <div>color: Желтый</div>
-              <div>weight (кг): 28</div>
-            </div>
-          </li>
-          <li class="fruit__item fruit_lightbrown">
-            <div class="fruit__info">
-              <div>index: 4</div>
-              <div>kind: Тамаринд</div>
-              <div>color: светло-коричневый</div>
-              <div>weight (кг): 22</div>
-            </div>
-          </li> -->
-        </ul>
+        <ul class="fruits__list"></ul>
       </section>
     </main>
 
