index.html was modified

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <!-- пользователь указывает значения характеристик будущего фрукта -->
           <div class="line">
             <div>kind:</div>
-            <input class="kind__input" />
+            <input type="text" class="kind__input" />
           </div>
 
           <div class="line">
